pkl-core/src/test/files/LanguageSnippetTests/input/errors/power/typeConstraints15.pkl
foo: String(this == "foo") | String(this == "qux") = "bar"
